# GOAT

./: .gitignore  LICENSE.md  common.py  material_data_parser.py  parameters_processing.py  problem_data.py  solver.py  test_Azmy_input_processing.py
PROBLEMS/: check_mesh_quality.py  convert.py  get_material_names.py  gmsh_to_goat.sh
PROBLEMS/Azmy/: Azmy.geo  Azmy_vac.geo  Azmy_vac_ref.geo  mesh1.py  mesh2.py  mesh3.py  mesh4.geo  mesh5.geo
PROBLEMS/Azmy/MATERIALS/: D  M1  M2
discretization_modules/: __init__.py  discretizations.py  generic_discretization.py
flux_modules/: __init__.py  elliptic_sn_flux_module.py  flux_module.py
flux_modules/cpp/PETSc/: PETSc_utils.cpp  PETSc_utils.h
transport_data/: __init__.py  lgvalues.txt  ordinates.nb  pweights.txt  test_ordinates.py
transport_data/cpp/: AngularTensors.cpp  AngularTensors.h  CMakeLists.txt  OrdinatesData.cpp  OrdinatesData.h  main.cpp
